# alita_g

./: README.md  alita-g.txt  crop_banner.py  langgraph.json  main.py  pyproject.toml
alita_g/: abstraction.py  eval.py  graph.py  mcp_box.py  monitoring.py
src/alita_g/: abstraction.py  eval.py  graph.py  mcp_box.py  monitoring.py
